--- a/Messenger/twitter_app/frontend/public/home.html
+++ b/Messenger/twitter_app/frontend/public/home.html
@@ -1,19 +1,20 @@
 {% load static %}
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Messenger</title>
     <!-- Импортируем стили -->
-    <link rel="icon" href="{% static 'img/home/icon.png' %}">
-    <link rel="stylesheet" href="{% static 'css/home/main.css' %}">
+    <link rel="icon" href="{% static 'src/assets/img/home/icon.png' %}">
+    <link rel="stylesheet" href="{% static 'src/assets/css/home/main.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Импортируем скрипты -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="{% static 'js/home/pre-launch_scripts.js' %}"></script>
+    
+    <script src="{% static 'src/assets/js/home/pre-launch_scripts.js' %}"></script>
     
 </head>
 <body>
@@ -21,54 +22,54 @@
         <section class="left-menu">
             <div class="menu-elem-icon">
                 <div class="menu-elem-active-icon">
-                    <img src="{% static 'img/home/icon.png' %}" alt="">
+                    <img src="{% static 'src/assets/img/home/icon.png' %}" alt="">
                 </div>
             </div>
             <div class="menu-elem">
                 <div class="menu-elem-active active-page">
-                    <img src="{% static 'img/home/home.png' %}" alt="">
+                    <img src="{% static 'src/assets/img/home/home.png' %}" alt="">
                     <span>Home</span>
                 </div>
             </div>
             <div class="menu-elem">
                 <div class="menu-elem-active">
-                    <img src="{% static 'img/home/explore.png' %}" alt="">
+                    <img src="{% static 'src/assets/img/home/explore.png' %}" alt="">
                     <span>Explore</span>
                 </div>
             </div>
             <div class="menu-elem">
                 <div class="menu-elem-active">
-                    <img src="{% static 'img/home/notification.png' %}" alt="">
+                    <img src="{% static 'src/assets/img/home/notification.png' %}" alt="">
                     <span>Notifications</span>
                 </div>
             </div>
             <div class="menu-elem">
                 <div class="menu-elem-active">
-                    <img src="{% static 'img/home/messages.png' %}" alt="">
+                    <img src="{% static 'src/assets/img/home/messages.png' %}" alt="">
                     <span>Messages</span>
                 </div>
             </div>
             <div class="menu-elem">
                 <div class="menu-elem-active">
-                    <img src="{% static 'img/home/bookmark.png' %}" alt="">
+                    <img src="{% static 'src/assets/img/home/bookmark.png' %}" alt="">
                     <span>Bookmark</span>
                 </div>
             </div>
             <div class="menu-elem">
                 <div class="menu-elem-active">
-                    <img src="{% static 'img/home/list.png' %}" alt="">
+                    <img src="{% static 'src/assets/img/home/list.png' %}" alt="">
                     <span>Lists</span>
                 </div>
             </div>
             <div class="menu-elem">
                 <div class="menu-elem-active">
-                    <img src="{% static 'img/home/profile.png' %}" alt="">
+                    <img src="{% static 'src/assets/img/home/profile.png' %}" alt="">
                     <span>Profile</span>
                 </div>
             </div>
             <div class="menu-elem">
                 <div class="menu-elem-active">
-                    <img src="{% static 'img/home/more.png' %}" alt="">
+                    <img src="{% static 'src/assets/img/home/more.png' %}" alt="">
                     <span>More</span>
                 </div>
             </div>
@@ -89,9 +90,9 @@
                 <div class="tweets" id="tweets">
                     <div>
                         <div v-for="task in info">
-                            <Tweets 
-                                url_close_img="{% static 'img/home/close.png' %}" 
-                                url_like_img="{% static 'img/home/heart.png' %}"
+                            <Tweets
+                                url_close_img="{% static 'src/assets/img/home/close.png' %}"
+                                url_like_img="{% static 'src/assets/img/home/heart.png' %}"
                                 v-bind:author_nickname="task.author_nickname"
                                 v-bind:text_tweet="task.text_tweet"
                                 v-bind:likes=task.likes
@@ -105,7 +106,13 @@
         </section>
     </main>
 
-    <script src="{% static 'js/home/main.js' %}"></script>
-    <script src="{% static 'js/home/vue.js' %}"></script>
+
+    <!-- <script type="module" src="{% static 'js/home/imports.js' %}"></script> -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+    <script type="module" src="{% static 'src/main.js' %}"></script>
+
+    <script src="{% static 'src/assets/js/home/main.js' %}"></script>
+    <!-- <script src="{% static 'js/home/vue.js' %}"></script> -->
 </body>
 </html>
