--- a/Messenger/twitter_app/frontend/public/log_auth.html
+++ b/Messenger/twitter_app/frontend/public/log_auth.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- Импортируем стили -->
-    <link rel="stylesheet" href="{% static 'css/log_auth/main.css' %}">
+    <link rel="stylesheet" href="{% static 'src/assets/css/log_auth/main.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -62,6 +62,6 @@
         
     </main>
 
-    <script src="{% static 'js/log_auth/main.js' %}"></script>
+    <script src="{% static 'src/assets/js/log_auth/main.js' %}"></script>
 </body>
 </html>
