--- a/Messenger/frontend/public/todo_app/home.html
+++ b/Messenger/frontend/public/todo_app/home.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icon.png">
+    <link rel="stylesheet" href="{% static 'src/todo_app/assets/css/main/style.css' %}">
+    <link rel="icon" href="{% static 'src/todo_app/assets/img/home/icon.png' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.g    static.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -18,44 +21,58 @@
     <section class="main" id="main">
         <h2 class="title-page">My Todos</h2>
         <div class="new-task-block">
-            <div class="create-title-task">
-                <p class="p-title">Name</p>
-                <input required  class="input-name" type="text" placeholder="Name">
-            </div>
-            <div class="create-description-task">
-                <p class="p-description">Description</p>
-                <input required  type="text" placeholder="description" class="input-description">
-            </div>
-            <div class="create-task-block-button" id="create-task-block-button">
-                <button class="button-create-task" @click="num_task">Add Todo</button>
-            </div>
+            <form action="{% url 'todo_app:new_task' user_id %}" method="POST">
+                {% csrf_token %}
+                <div class="create-title-task">
+                    <p class="p-title">Name</p>
+                    <input required name="title"  class="input-name" type="text" placeholder="Name">
+                </div>
+                <div class="create-description-task">
+                    <p class="p-description">Description</p>
+                    <input required name="description"  type="text" placeholder="description" class="input-description">
+                </div>
+                <div class="create-task-block-button" id="create-task-block-button">
+                    <input type="submit" class="button-create-task" value="Add Todo">
+                </div>
+            </form>
+
         </div>
         <div class="message-for-user" id="message-for-user">
             <h3>Вы уверены что хотите удалить данную заметку?</h3>
             <span><button @click="cancel">Cancel</button><button @click="confirm">Confirm</button></span>
         </div>
         <div class="tasks-section" id="tasks-section">
-            <template v-if="done == 'in_progress'">
-                <div class="title-description">
-                    <p class="title-text in_progress-title">{{title}}</p>
-                    <p class="description-text in_progress-description">{{description}}</p>
-                </div>
-                <div class="buttons">
-                    <button v-if="done == 'in_progress'" class="button-complate" @click="perform_task(id)">Complate</button>
-                    <button class="button-delete" @click="delete_task(id)">Delete</button>
-                </div>
-            </template>
-            <template v-else-if="done == 'ready'">
-                <div class="title-description">
-                    <p class="title-text ready">{{title}}</p>
-                    <p class="description-text ready">{{description}}</p>
-                </div>
-                <div class="buttons">
-                    <button v-if="done == 'in_progress'" class="button-complate" @click="perform_task(id)">Complate</button>
-                    <button class="button-delete" @click="delete_task(id)">Delete</button>
-                </div>
-            </template>
+            {% for task in content %}
+            {{task}}
+            {{task.done}}
+            {{task.task_title}}
+            {{task.task_description}}
+                {% if task.done == False %}
+                    <div class="task">
+                        <div class="title-description">
+                            <p class="title-text in_progress-title">{{task.task_title}}</p>
+                            <p class="description-text in_progress-description">{{task.task_description}}</p>
+                        </div>
+                        <div class="buttons">
+                            <a href="{% url 'todo_app:complete_task' task.id %}">
+                                <button class="button-complate">Complate</button>
+                            </a>
 
+                            <button class="button-delete" @click="delete_task(id)">Delete</button>
+                        </div>
+                    </div>
+                {% elif task.done == True %}
+                    <div class="task">
+                        <div class="title-description">
+                            <p class="title-text ready">{{task.task_title}}</p>
+                            <p class="description-text ready">{{task.task_description}}</p>
+                        </div>
+                        <div class="buttons">
+                            <button class="button-delete" @click="delete_task(id)">Delete</button>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
         </div>
     </section>
 
