--- a/Messenger/frontend/public/twitter_app/log_auth.html
+++ b/Messenger/frontend/public/twitter_app/log_auth.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Импортируем скрипты -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script>
+        let data = {{context.data}}
+    </script>
 </head>
 <body>
     <div class="error">
@@ -19,7 +22,7 @@
     </div>
     <main>
         <h1>Добро пожаловать</h1>
-        <form action="{% url 'twitter_app:log_auth' %}" method="POST" class="login" id="login" enctype="multipart/form-data">
+        <form action="{% url 'log_auth:log_auth' %}" method="POST" class="login" id="login" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="input_nickname">
                 Введите никнейм <br>
@@ -39,7 +42,7 @@
             <br>
             <span class="look_auth_block">Авторизоваться</span> 
         </form>
-        <form action="{% url 'twitter_app:log_auth' %}" method="POST" class="authorization" id="authorization" enctype="multipart/form-data">
+        <form action="{% url 'log_auth:log_auth' %}" method="POST" class="authorization" id="authorization" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="input_nickname_auth">
                 Введите никнейм <br>
@@ -58,6 +61,6 @@
         
     </main>
 
-    <script src="{% static 'src/assets/js/log_auth/main.js' %}"></script>
+    <script src="{% static 'src/twitter_app/assets/js/log_auth/main.js' %}"></script>
 </body>
 </html>
