--- a/Messenger/frontend/public/todo_app/home.html
+++ b/Messenger/frontend/public/todo_app/home.html
@@ -32,45 +32,50 @@
                     <input required name="description"  type="text" placeholder="description" class="input-description">
                 </div>
                 <div class="create-task-block-button" id="create-task-block-button">
-                    <input type="submit" class="button-create-task" value="Add Todo">
+                    <input type="submit" class="button-create-task" value="Add Todo" style="color: white">
                 </div>
             </form>
 
         </div>
-        <div class="message-for-user" id="message-for-user">
-            <h3>Вы уверены что хотите удалить данную заметку?</h3>
-            <span><button @click="cancel">Cancel</button><button @click="confirm">Confirm</button></span>
-        </div>
+<!--        <div class="message-for-user" id="message-for-user">-->
+<!--            <h3>Вы уверены что хотите удалить данную заметку?</h3>-->
+<!--            <span><button @click="cancel">Cancel</button><button @click="confirm">Confirm</button></span>-->
+<!--        </div>-->
         <div class="tasks-section" id="tasks-section">
             {% for task in content %}
-            {{task}}
-            {{task.done}}
-            {{task.task_title}}
-            {{task.task_description}}
                 {% if task.done == False %}
-                    <div class="task">
-                        <div class="title-description">
-                            <p class="title-text in_progress-title">{{task.task_title}}</p>
-                            <p class="description-text in_progress-description">{{task.task_description}}</p>
-                        </div>
-                        <div class="buttons">
-                            <a href="{% url 'todo_app:complete_task' task.id %}">
-                                <button class="button-complate">Complate</button>
-                            </a>
+                    <a href="{% url 'todo_app:task_detail' task.id %}">
+                        <div class="task">
+                            <div class="title-description">
+                                <p class="title-text in_progress-title">{{task.task_title}}</p>
+                                <p class="description-text in_progress-description">{{task.task_description}}</p>
+                            </div>
+                            <div class="buttons">
 
-                            <button class="button-delete" @click="delete_task(id)">Delete</button>
+                                <a href="{% url 'todo_app:complete_task' task.id %}">
+                                    <button class="button-complate">Complate</button>
+                                </a>
+                                <a href="{% url 'todo_app:delete_task' task.id %}">
+                                    <button class="button-delete">Delete</button>
+                                </a>
+                            </div>
                         </div>
-                    </div>
+                    </a>
+
                 {% elif task.done == True %}
-                    <div class="task">
-                        <div class="title-description">
-                            <p class="title-text ready">{{task.task_title}}</p>
-                            <p class="description-text ready">{{task.task_description}}</p>
+                    <a href="{% url 'todo_app:task_detail' task.id %}">
+                        <div class="task">
+                            <div class="title-description">
+                                <p class="title-text ready">{{task.task_title}}</p>
+                                <p class="description-text ready">{{task.task_description}}</p>
+                            </div>
+                            <div class="buttons">
+                                <a href="{% url 'todo_app:delete_task' task.id %}">
+                                    <button class="button-delete">Delete</button>
+                                </a>
+                            </div>
                         </div>
-                        <div class="buttons">
-                            <button class="button-delete" @click="delete_task(id)">Delete</button>
-                        </div>
-                    </div>
+                    </a>
                 {% endif %}
             {% endfor %}
         </div>
