--- a/Hello/index.html
+++ b/Hello/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<title>My HTML Page</title>
 </head>
 <body>
-    Hello
+	<h1>Welcome to my page</h1>
+	<button onclick="closeWindow()">Close Window</button>
+	<script type="text/javascript">
+		function closeWindow() {
+			window.close();
+		}
+	</script>
 </body>
 </html>
